force-app/main/default/objects/Profile__c/Profile__c.object-meta.xml
<CustomObject>
    <description>Information about an organization gathered in advance of them submitting a proposal</description>
    <label>Profile</label>
    <nameField>
        <displayFormat>PROF-{YYYY}-{00000}</displayFormat>
        <label>Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>