force-app/main/default/objects/Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account of the org responsible for this profile</description>
    <inlineHelpText>The account of the org responsible for this profile</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Profiles</relationshipLabel>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>