force-app/main/default/objects/Profile__c/fields/Account_external_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_external_Id__c</fullName>
    <description>FileMaker ID of the org record for the group submitting this profile</description>
    <inlineHelpText>FileMaker ID of the org record for the group submitting this profile</inlineHelpText>
    <label>Account external Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>