force-app/main/default/objects/Profile__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <description>The name of the account to which this profile is linked</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the account to which this profile is linked</inlineHelpText>
    <label>Account name</label>
    <type>Text</type>
</CustomField>