force-app/main/default/objects/Profile__c/fields/Annual_income__c.field-meta.xml
<CustomField>
    <fullName>Annual_income__c</fullName>
    <description>Organization&apos;s annual income for the previous fiscal year in US dollars</description>
    <inlineHelpText>Organization&apos;s annual income for the previous fiscal year in US dollars</inlineHelpText>
    <label>Annual income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>