force-app/main/default/objects/Profile__c/fields/Applied_before__c.field-meta.xml
<CustomField>
    <fullName>Applied_before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant claims to have applied to us for a grant in the past</description>
    <inlineHelpText>Applicant claims to have applied to us for a grant in the past</inlineHelpText>
    <label>Applied before</label>
    <type>Checkbox</type>
</CustomField>