force-app/main/default/objects/Profile__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The staff member assigned to review this profile</description>
    <inlineHelpText>The staff member assigned to review this profile</inlineHelpText>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>