force-app/main/default/objects/Profile__c/fields/Community_contact__c.field-meta.xml
<CustomField>
    <fullName>Community_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The community member contact record used by this group to login</description>
    <inlineHelpText>The community member contact record used by this group to login</inlineHelpText>
    <label>Community contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profiles</relationshipLabel>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>