force-app/main/default/objects/Profile__c/fields/Community_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Community_contact_email__c</fullName>
    <formula>Community_contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community contact email</label>
    <type>Text</type>
</CustomField>