force-app/main/default/objects/Profile__c/fields/Contact1_email__c.field-meta.xml
<CustomField>
    <fullName>Contact1_email__c</fullName>
    <description>Email for primary contact in Profile</description>
    <inlineHelpText>Email for primary contact in Profile</inlineHelpText>
    <label>Contact1 email</label>
    <type>Email</type>
</CustomField>