force-app/main/default/objects/Profile__c/fields/Contact2_email__c.field-meta.xml
<CustomField>
    <fullName>Contact2_email__c</fullName>
    <description>Email for secondary contact in Profile</description>
    <inlineHelpText>Email for secondary contact in Profile</inlineHelpText>
    <label>Contact2 email</label>
    <type>Email</type>
</CustomField>