force-app/main/default/objects/Profile__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group&apos;s country</description>
    <inlineHelpText>Group&apos;s country</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Profiles</relationshipLabel>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>