force-app/main/default/objects/Profile__c/fields/Country_name__c.field-meta.xml
<CustomField>
    <fullName>Country_name__c</fullName>
    <description>The country of this profile&apos;s account if any</description>
    <formula>IF( NOT(ISBLANK( Account__r.GM_country__c)), Account__r.GM_country__r.Name, 
 IF ( NOT(ISBLANK(Country__c)),   Country__r.Name , NULL )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The country of this profile&apos;s account if any</inlineHelpText>
    <label>Country name</label>
    <type>Text</type>
</CustomField>