force-app/main/default/objects/Profile__c/fields/Date_declined__c.field-meta.xml
<CustomField>
    <fullName>Date_declined__c</fullName>
    <description>The date on which this profile was marked for definitive decline (ie. following internal review of initial decline decision).</description>
    <inlineHelpText>The date on which this profile was marked for definitive decline (ie. following internal review of initial decline decision).</inlineHelpText>
    <label>Date declined</label>
    <type>Date</type>
</CustomField>