force-app/main/default/objects/Profile__c/fields/Date_founded_month__c.field-meta.xml
<CustomField>
    <fullName>Date_founded_month__c</fullName>
    <description>Month of the date founded as provided by applicant</description>
    <inlineHelpText>Month of the date founded as provided by applicant</inlineHelpText>
    <label>Date founded month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>