force-app/main/default/objects/Profile__c/fields/Date_founded_year__c.field-meta.xml
<CustomField>
    <fullName>Date_founded_year__c</fullName>
    <description>Year of the date founded as provided by applicant</description>
    <inlineHelpText>Year of the date founded as provided by applicant</inlineHelpText>
    <label>Date founded year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>