force-app/main/default/objects/Profile__c/fields/Date_holdover_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_holdover_sent__c</fullName>
    <description>The date on which the holdover letter for this profile was sent</description>
    <inlineHelpText>The date on which the holdover letter for this profile was sent</inlineHelpText>
    <label>Date holdover sent</label>
    <type>Date</type>
</CustomField>