force-app/main/default/objects/Profile__c/fields/Date_of_last_grant__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_grant__c</fullName>
    <formula>Account__r.Date_of_last_grant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of last grant</label>
    <type>Date</type>
</CustomField>