force-app/main/default/objects/Profile__c/fields/Date_org_founded__c.field-meta.xml
<CustomField>
    <fullName>Date_org_founded__c</fullName>
    <description>Founding date of the organization, from the linked account if any, else from the submitted profile</description>
    <formula>IF (AND (NOT (ISBLANK (Account__c)), NOT (ISBLANK (Account__r.Date_org_founded__c))), 
  Account__r.Date_org_founded__c,
  IF (OR (ISBLANK ( Date_founded_month__c ) , ISBLANK ( Date_founded_year__c )),
    NULL,
    DATE (Date_founded_year__c , Date_founded_month__c, 1)
  )
)</formula>
    <inlineHelpText>Founding date of the organization, from the linked account if any, else from the submitted profile</inlineHelpText>
    <label>Date org founded</label>
    <type>Date</type>
</CustomField>