force-app/main/default/objects/Profile__c/fields/Date_org_founded_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_org_founded_submitted__c</fullName>
    <description>Founding date of the organization from the submitted profile</description>
    <inlineHelpText>Founding date of the organization from the submitted profile</inlineHelpText>
    <label>Date org founded submitted</label>
    <type>Date</type>
</CustomField>