force-app/main/default/objects/Profile__c/fields/Date_review_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_review_completed__c</fullName>
    <description>The date on which profile review was completed</description>
    <inlineHelpText>The date on which profile review was completed</inlineHelpText>
    <label>Date review completed</label>
    <type>Date</type>
</CustomField>