force-app/main/default/objects/Profile__c/fields/Date_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted__c</fullName>
    <description>Date on which this profile was submitted</description>
    <inlineHelpText>Date on which this profile was submitted</inlineHelpText>
    <label>Date submitted</label>
    <type>Date</type>
</CustomField>