force-app/main/default/objects/Profile__c/fields/Days_submitted_to_review_completed__c.field-meta.xml
<CustomField>
    <fullName>Days_submitted_to_review_completed__c</fullName>
    <description>The number of days from date submitted to date review completed (or to date declined) or to today if date submitted is in the past and the review hasn&apos;t yet been completed, blank if date date submitted is blank</description>
    <formula>IF(
 NOT(ISBLANK( Date_submitted__c )),
 IF(
  NOT(ISBLANK( Date_review_completed__c )),
  Date_review_completed__c - Date_submitted__c,
  IF(
   NOT(ISBLANK( Date_declined__c )), 
   Date_declined__c - Date_submitted__c,
   IF(
    Date_submitted__c &lt;= TODAY(),
    TODAY() - Date_submitted__c,
    null
   )
  )
 ),
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date submitted to date review completed (or to date declined) or to today if date submitted is in the past and the review hasn&apos;t yet been completed, blank if date date submitted is blank</inlineHelpText>
    <label>Days submitted to review completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>