force-app/main/default/objects/Profile__c/fields/Emails_from_dupes__c.field-meta.xml
<CustomField>
    <fullName>Emails_from_dupes__c</fullName>
    <description>A comma-separated list of email addresses from duplicate applicant records, for use in emailing an applicant re deleting duplicate applicant records</description>
    <inlineHelpText>A comma-separated list of email addresses from duplicate applicant records, for use in emailing an applicant re deleting duplicate applicant records</inlineHelpText>
    <label>Emails from dupes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>