force-app/main/default/objects/Profile__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <description>Date on which this profile will &quot;expire&quot;, at which point the applicant needs to complete a new one</description>
    <inlineHelpText>Date on which this profile will &quot;expire&quot;, at which point the applicant needs to complete a new one</inlineHelpText>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>