force-app/main/default/objects/Profile__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Field used to (temporarily) store Ids</description>
    <inlineHelpText>Field used to (temporarily) store Ids</inlineHelpText>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>