force-app/main/default/objects/Profile__c/fields/First_donor__c.field-meta.xml
<CustomField>
    <fullName>First_donor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will FS group be this group&apos;s first donor?</description>
    <inlineHelpText>Will FS group be this group&apos;s first donor?</inlineHelpText>
    <label>First donor</label>
    <type>Checkbox</type>
</CustomField>