force-app/main/default/objects/Profile__c/fields/Geo_target_area_Global__c.field-meta.xml
<CustomField>
    <fullName>Geo_target_area_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then applicant selected the Global geographical target area</description>
    <inlineHelpText>If checked, then applicant selected the Global geographical target area</inlineHelpText>
    <label>Geo target area: Global</label>
    <type>Checkbox</type>
</CustomField>