force-app/main/default/objects/Profile__c/fields/Geo_target_area_MultiState__c.field-meta.xml
<CustomField>
    <fullName>Geo_target_area_MultiState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then applicant selected the MultiState geographical target area</description>
    <inlineHelpText>If checked, then applicant selected the MultiState geographical target area</inlineHelpText>
    <label>Geo target area: MultiState</label>
    <type>Checkbox</type>
</CustomField>