force-app/main/default/objects/Profile__c/fields/Is_women_s_fund__c.field-meta.xml
<CustomField>
    <fullName>Is_women_s_fund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this profile is for a group that is a women&apos;s fund.</description>
    <inlineHelpText>Checked if this profile is for a group that is a women&apos;s fund.</inlineHelpText>
    <label>Is women&apos;s fund</label>
    <type>Checkbox</type>
</CustomField>