force-app/main/default/objects/Profile__c/fields/Last_modified_datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_datetime__c</fullName>
    <description>Last modified date/time</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last modified date/time</inlineHelpText>
    <label>Last modified datetime</label>
    <type>DateTime</type>
</CustomField>