force-app/main/default/objects/Profile__c/fields/Latest_submitted__c.field-meta.xml
<CustomField>
    <fullName>Latest_submitted__c</fullName>
    <description>Checked if this is the latest submitted profile for this account, that is, no next profile has been submitted</description>
    <formula>AND(
 NOT(ISBLANK( Date_submitted__c )),
 OR(
  ISBLANK( Next_profile__c ),
  ISBLANK( Next_profile__r.Date_submitted__c )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this is the latest submitted profile for this account, that is, no next profile has been submitted</inlineHelpText>
    <label>Latest submitted</label>
    <type>Checkbox</type>
</CustomField>