force-app/main/default/objects/Profile__c/fields/Led_Black_women_gender_expansive_person__c.field-meta.xml
<CustomField>
    <fullName>Led_Black_women_gender_expansive_person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Led by Black women and/or girls and/or trans people and/or intersex people.</description>
    <inlineHelpText>Led by Black women and/or girls and/or trans people and/or intersex people.</inlineHelpText>
    <label>Led: Black women/gender-expansive person</label>
    <type>Checkbox</type>
</CustomField>