force-app/main/default/objects/Profile__c/fields/Mission_Vision__c.field-meta.xml
<CustomField>
    <fullName>Mission_Vision__c</fullName>
    <description>The organization&apos;s mission/vision statement submitted by the applicant</description>
    <inlineHelpText>The organization&apos;s mission/vision statement submitted by the applicant</inlineHelpText>
    <label>Mission/Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>