force-app/main/default/objects/Profile__c/fields/Next_profile__c.field-meta.xml
<CustomField>
    <fullName>Next_profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The subsequent profile, created after this one expires</description>
    <inlineHelpText>The subsequent profile, created after this one expires</inlineHelpText>
    <label>Next profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Prior profile</relationshipLabel>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>