force-app/main/default/objects/Profile__c/fields/No_ineligible_affiliations__c.field-meta.xml
<CustomField>
    <fullName>No_ineligible_affiliations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not affiliated with political party, government, religious institution.</description>
    <inlineHelpText>Not affiliated with political party, government, religious institution.</inlineHelpText>
    <label>No ineligible affiliations</label>
    <type>Checkbox</type>
</CustomField>