force-app/main/default/objects/Profile__c/fields/Num_portfolio_profile_assigns__c.field-meta.xml
<CustomField>
    <fullName>Num_portfolio_profile_assigns__c</fullName>
    <description>The number of assignments of this profile to portfolios</description>
    <inlineHelpText>The number of assignments of this profile to portfolios</inlineHelpText>
    <label>Num portfolio-profile assigns</label>
    <summaryForeignKey>Portfolio_Profile_Assign__c.Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>