force-app/main/default/objects/Profile__c/fields/Number_of_errors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_errors__c</fullName>
    <description>The number of errors in this profile - should be 0 if submitted</description>
    <inlineHelpText>The number of errors in this profile - should be 0 if submitted</inlineHelpText>
    <label>Number of errors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>