force-app/main/default/objects/Profile__c/fields/Org_age_in_years__c.field-meta.xml
<CustomField>
    <fullName>Org_age_in_years__c</fullName>
    <description>Number of years since date org founded</description>
    <formula>IF(ISBLANK(Date_org_founded__c),
 null,
 (TODAY() - Date_org_founded__c) / 365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of years since date org founded</inlineHelpText>
    <label>Org age in years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>