force-app/main/default/objects/Profile__c/fields/Org_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Org_Eligibility__c</fullName>
    <description>Checked if BFF profile and all three eligibility-based checkboxes are true.</description>
    <formula>IF ( 
 TEXT(Owner:User.FS_Group_Name__c) = &quot;FS_BFF&quot;, AND(Led_Black_women_gender_expansive_person__c, Primary_focus_alignment__c, No_ineligible_affiliations__c), FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if BFF profile and all three eligibility-based checkboxes are true.</inlineHelpText>
    <label>Org Eligibility</label>
    <type>Checkbox</type>
</CustomField>