force-app/main/default/objects/Profile__c/fields/Org_email__c.field-meta.xml
<CustomField>
    <fullName>Org_email__c</fullName>
    <description>Group&apos;s email address</description>
    <inlineHelpText>Group&apos;s email address</inlineHelpText>
    <label>Org email</label>
    <type>Email</type>
</CustomField>