force-app/main/default/objects/Profile__c/fields/Org_name__c.field-meta.xml
<CustomField>
    <fullName>Org_name__c</fullName>
    <description>Name of account if this profile is linked to an account</description>
    <formula>IF(NOT(ISBLANK( Account__c )), Account__r.Name, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of account if this profile is linked to an account</inlineHelpText>
    <label>Org name</label>
    <type>Text</type>
</CustomField>