force-app/main/default/objects/Profile__c/fields/Org_name_submitted__c.field-meta.xml
<CustomField>
    <fullName>Org_name_submitted__c</fullName>
    <description>Org name from Profile form instance</description>
    <inlineHelpText>Org name from Profile form instance</inlineHelpText>
    <label>Org name submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>