force-app/main/default/objects/Profile__c/fields/Organization_type__c.field-meta.xml
<CustomField>
    <fullName>Organization_type__c</fullName>
    <description>The organization type as selected by the applicant in the profile form</description>
    <inlineHelpText>The organization type as selected by the applicant in the profile form</inlineHelpText>
    <label>Organization type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IntlNetwork</fullName>
            </value>
            <value>
                <fullName>RegNetwork</fullName>
            </value>
            <value>
                <fullName>NatNetwork</fullName>
            </value>
            <value>
                <fullName>RegDomesticNetwork</fullName>
            </value>
            <value>
                <fullName>LocalNetwork</fullName>
            </value>
            <value>
                <fullName>IntlNonProfit</fullName>
            </value>
            <value>
                <fullName>NatNonProfit</fullName>
            </value>
            <value>
                <fullName>Grassroots</fullName>
            </value>
            <value>
                <fullName>CommunityBasedRural</fullName>
            </value>
            <value>
                <fullName>CommunityBasedUrban</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>GlobalTransnationalTranslocal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>