force-app/main/default/objects/Profile__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Group phone number</description>
    <inlineHelpText>Group phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>