force-app/main/default/objects/Profile__c/fields/Previous_core_grant__c.field-meta.xml
<CustomField>
    <fullName>Previous_core_grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org has received a core grant before.</description>
    <inlineHelpText>Org has received a core grant before.</inlineHelpText>
    <label>Previous core grant</label>
    <type>Checkbox</type>
</CustomField>