force-app/main/default/objects/Profile__c/fields/Previous_MY_grant__c.field-meta.xml
<CustomField>
    <fullName>Previous_MY_grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org previously received multi-year grant.</description>
    <inlineHelpText>Org previously received multi-year grant.</inlineHelpText>
    <label>Previous MY grant</label>
    <type>Checkbox</type>
</CustomField>