force-app/main/default/objects/Profile__c/fields/Primary_focus_alignment__c.field-meta.xml
<CustomField>
    <fullName>Primary_focus_alignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org set up to specifically promote the rights of Black feminists, women and/or girls and/or trans people and/or intersex people and this is the primary focus for all our activities</description>
    <inlineHelpText>Org set up to specifically promote the rights of Black feminists, women and/or girls and/or trans people and/or intersex people and this is the primary focus for all our activities</inlineHelpText>
    <label>Primary focus alignment</label>
    <type>Checkbox</type>
</CustomField>