force-app/main/default/objects/Profile__c/fields/Prior_profile__c.field-meta.xml
<CustomField>
    <fullName>Prior_profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prior profile (if any) for this account</description>
    <inlineHelpText>The prior profile (if any) for this account</inlineHelpText>
    <label>Prior profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Profiles (Prior profile)</relationshipLabel>
    <relationshipName>Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>