force-app/main/default/objects/Profile__c/fields/Profile_emails__c.field-meta.xml
<CustomField>
    <fullName>Profile_emails__c</fullName>
    <description>Contains all emails in Profile for the group</description>
    <formula>SUBSTITUTE(
 IF ( NOT (ISBLANK(Community_contact_email__c)), Community_contact_email__c &amp; &apos;,&apos;, &apos;&apos;) &amp;
 IF ( NOT (ISBLANK(Org_email__c)) &amp;&amp; (Org_email__c &lt;&gt; Community_contact_email__c), Org_email__c &amp; &apos;,&apos;, &apos;&apos;) &amp;
 IF ( 
  NOT (ISBLANK( Contact1_email__c)) &amp;&amp; 
  NOT (CONTAINS(Community_contact_email__c &amp; &apos; &apos; &amp; Org_email__c, Contact1_email__c)),
  Contact1_email__c &amp; &apos;,&apos;, &apos;&apos;) &amp;
 IF ( 
  NOT (ISBLANK( Contact2_email__c)) &amp;&amp; 
  NOT (CONTAINS(Community_contact_email__c &amp; &apos; &apos; &amp; Org_email__c &amp; &apos; &apos; &amp; Contact1_email__c, Contact2_email__c)), 
  Contact2_email__c &amp; &apos;,&apos;, &apos;&apos;) &amp;
 &apos;||&apos;, &apos;,||&apos;, &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains all emails in Profile for the group</inlineHelpText>
    <label>Profile emails</label>
    <type>Text</type>
</CustomField>