force-app/main/default/objects/Profile__c/fields/Proposal_recent__c.field-meta.xml
<CustomField>
    <fullName>Proposal_recent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recently created proposal linked to this profile (if any)</description>
    <inlineHelpText>The most recently created proposal linked to this profile (if any)</inlineHelpText>
    <label>Proposal recent</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Profiles</relationshipLabel>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>