force-app/main/default/objects/Profile__c/fields/Rank_EE__c.field-meta.xml
<CustomField>
    <fullName>Rank_EE__c</fullName>
    <description>Non-editable field that replicates the form data component EERank, the rank (between 1 and 3) that the applicant assigned to the EE impact area</description>
    <inlineHelpText>Non-editable field that replicates the form data component EERank, the rank (between 1 and 3) that the applicant assigned to the EE impact area</inlineHelpText>
    <label>Rank EPE</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>