force-app/main/default/objects/Profile__c/fields/Rank_SRHR__c.field-meta.xml
<CustomField>
    <fullName>Rank_SRHR__c</fullName>
    <description>Non-editable field that replicates the form data component SRHRRank, the rank (between 1 and 3) that the applicant assigned to the SRHR impact area</description>
    <inlineHelpText>Non-editable field that replicates the form data component SRHRRank, the rank (between 1 and 3) that the applicant assigned to the SRHR impact area</inlineHelpText>
    <label>Rank SRHR</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>