force-app/main/default/objects/Profile__c/fields/Rank_ZV__c.field-meta.xml
<CustomField>
    <fullName>Rank_ZV__c</fullName>
    <description>Non-editable field that replicates the form data component ZVRank, the rank (between 1 and 3) that the applicant assigned to the Zero Violence impact area</description>
    <inlineHelpText>Non-editable field that replicates the form data component ZVRank, the rank (between 1 and 3) that the applicant assigned to the Zero Violence impact area</inlineHelpText>
    <label>Rank ZV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>