force-app/main/default/objects/Profile__c/fields/Received_grant__c.field-meta.xml
<CustomField>
    <fullName>Received_grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant claims to have received a grant from us in the past</description>
    <inlineHelpText>Applicant claims to have received a grant from us in the past</inlineHelpText>
    <label>Received grant</label>
    <type>Checkbox</type>
</CustomField>